Fix navigation overflow

--- a/frontend/src/styles/modules/_navigation.scss
+++ b/frontend/src/styles/modules/_navigation.scss
@@ -99,6 +99,7 @@
         height: 100vh;
         margin-top: -62px;
         padding-bottom: $spacing-md;
+        overflow-y: auto;
 
         @include media-breakpoint-up(lg) {
             background-color: transparent;
